[tool.poetry]
name = "binance-apr-monitor"
version = "0.1.0"
description = ""
authors = ["Thomas de Lachaux <thomas.delachaux@gmail.com>"]
readme = "README.md"
packages = [{include = "binance_apr_monitor"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
influxdb-client = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
